--- a/style.css
+++ b/style.css
@@ -3,3 +3,64 @@
     height: 50px;
     border-radius: 50%;
 }
+
+*{
+    font-family: 'Open Sans', sans-serif;
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+    line-height: 18px;
+}
+.stronger{
+    font-weight: bold;
+}
+
+.container{
+    margin: 15px;
+}
+.body{
+    width: 320px;
+}
+
+header{
+    display: flex;
+    flex-direction: row;
+}
+
+.textProfilePic{
+    height: 50px;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
+figure img{
+    width: 320px;
+    height: 320px;
+    margin-top: 15px;
+}
+
+#coeur{
+    width: 28px;
+    height: 28px;
+}
+
+.engagementZone{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 7px;
+    margin-bottom: 8px;
+}
+
+figcaption{
+    width: 320px;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+figcaption p{
+    margin-bottom: 18px;
+}
