--- a/style2.css
+++ b/style2.css
@@ -3,11 +3,12 @@
     margin: 0;
 }
 div{
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border: solid black 1px;
 }
 
 body{
     display: flex;
+    flex-wrap: wrap;
 }
